--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </div>
         <br />
         <div class="d-flex justify-content-center align-items-center">
-          A myth provides a pattern of behaviour to be imitated
+          <p class="text-center">A myth provides a pattern of behaviour to be imitated</p>
         </div>
         <br />
         <div class="d-flex justify-content-center align-items-center">
-          Mythologic © 2020
+          <p class="text-center">Mythologic © 2020</p>
         </div>
       </div>
     </div>
